--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Warung MamoyCemil - Home</title>
+  <title>Warung MamoyCemil</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,7 +28,7 @@
       <div class="foto-grid">
         <div class="menu-item">
           <img src="asset/burger.png" alt="Burger" />
-          <p>Burger - Rp10.000</p>
+          <p>Beef Burger - Rp10.000</p>
         </div>
         <div class="menu-item">
           <img src="asset/risol.png" alt="Risol" />
@@ -53,7 +53,7 @@
     <div class="testimoni">
       <h2>Testimoni</h2>
       <blockquote>
-        "Coming Soon"
+        "Kebabnya bikin kenyang"
       </blockquote>
     </div>
 
