--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </div>
         <div class="menu-item">
           <img src="asset/risol.png" alt="Risol" />
-          <p>Risol - Rp10.000 <br> (4 pcs)</p>
+          <p>Risol Mayo- Rp10.000 <br> (4 pcs)</p>
+          <p>Risol Mayo Spicy- Rp10.000 <br> (4 pcs)</p>
         </div>
         <div class="menu-item">
           <img src="asset/kebab.png" alt="Kebab" />
@@ -41,7 +42,8 @@
         </div>
         <div class="menu-item">
           <img src="asset/corndog.png" alt="Corndog" />
-          <p>Corndog - Rp5.000</p>
+          <p>Corndog Manis (coklat, strawberry, tiramisu, macha) - Rp5.000</p>
+          <p>Corndog Sosis - Rp5.000</p>
         </div>
         <div class="menu-item">
           <img src="asset/Coming soon.png" alt="Coming soon" />
