--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
       <div class="foto-grid">
         <div class="menu-item">
           <img src="asset/burger.png" alt="Burger" />
-          <p>Beef Burger - Rp10.000</p>
+          <p>Beef Burger  Rp10.000</p>
         </div>
         <div class="menu-item">
           <img src="asset/risol.png" alt="Risol" />
-          <p>Risol Mayo- Rp10.000 <br> (4 pcs)</p>
-          <p>Risol Mayo Spicy- Rp10.000 <br> (4 pcs)</p>
+          <p>Risol Mayo Rp10.000 <br> (4 pcs)</p>
+          <p>Risol Mayo Spicy Rp10.000 <br> (4 pcs)</p>
         </div>
         <div class="menu-item">
           <img src="asset/kebab.png" alt="Kebab" />
-          <p>Kebab (kecil) - Rp10.000</p>
-          <p>Kebab (sedang) - Rp15.000</p>
+          <p>Kebab (kecil)  Rp10.000</p>
+          <p>Kebab (sedang)  Rp15.000</p>
         </div>
         <div class="menu-item">
           <img src="asset/corndog.png" alt="Corndog" />
           <p>Corndog Manis (coklat, strawberry, tiramisu, macha) - Rp5.000</p>
-          <p>Corndog Sosis - Rp5.000</p>
+          <p>Corndog Sosis  Rp5.000</p>
         </div>
         <div class="menu-item">
           <img src="asset/Coming soon.png" alt="Coming soon" />
