--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="menu-item">
           <img src="asset/corndog.png" alt="Corndog" />
-          <p>Corndog Manis (coklat, strawberry, tiramisu, macha) - Rp5.000</p>
+          <p>Corndog Manis (coklat, strawberry, tiramisu, macha)  Rp5.000</p>
           <p>Corndog Sosis  Rp5.000</p>
         </div>
         <div class="menu-item">
